--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
 
     <section class="my-24 flex flex-col gap-12 lg:flex-row">
       <div class="grid gap-8 grid-cols-1 lg:grid-cols-2 flex-1">
-          <div class="rounded-xl h-36 bg-gradient-to-r from-[#F00] to-[#FF8938]"></div>
-          <div class="row-span-2 bg-[#e6a6231a] rounded-lg px-7 py-12 flex justify-center items-center"><img src="images/fresh-1.png" alt=""></div>
-          <div class="row-span-2 bg-[#5776391a] rounded-lg px-7 py-12 flex justify-center items-center"><img src="images/fresh-2.png" alt=""></div>
-          <div class="rounded-xl h-36 bg-gradient-to-r from-[#F00] to-[#FF8938]"></div>
+        <div class="rounded-xl h-36 bg-gradient-to-r from-[#F00] to-[#FF8938]"></div>
+        <div class="row-span-2 bg-[#e6a6231a] rounded-lg px-7 py-12 flex justify-center items-center"><img
+            src="images/fresh-1.png" alt=""></div>
+        <div class="row-span-2 bg-[#5776391a] rounded-lg px-7 py-12 flex justify-center items-center"><img
+            src="images/fresh-2.png" alt=""></div>
+        <div class="rounded-xl h-36 bg-gradient-to-r from-[#F00] to-[#FF8938]"></div>
       </div>
 
       <div class="space-y-5 flex-1">
@@ -111,12 +113,33 @@
         <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents
           the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
           custoers because of good words of mouth and unique customized service orginated from Taiwan.</p>
-          <h3 class="text-xl font-bold">Unique Taste</h3>
-          <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-          <h3 class="text-xl font-bold">Premium Quality</h3>
-          <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        <h3 class="text-xl font-bold">Unique Taste</h3>
+        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <h3 class="text-xl font-bold">Premium Quality</h3>
+        <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
       </div>
     </section>
+
+
+    <section class="my-24 rounded-lg bg-gradient-to-r from-[#F00] to-[#FF8938] px-20 py-24  flex flex-col lg:flex-row gap-12">
+      <div class="text-white space-y-5">
+        <h2 class="text-5xl font-extrabold">Meet Our Super <br> Clients</h2>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <button class="btn btn-primary">Show All</button>
+      </div>
+
+      <div class=" relative p-10 rounded-lg bg-white ">
+        <img  class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+        <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h4 class="font-bold mt-5">Ilham Yuda</h4>
+        <p class="font-medium">BusinessMan</p>
+        <div class=" flex justify-end">
+          <img src="images/circles.png" alt="">
+        </div>
+      </div>
+    </section>
+
   </main>
   <footer>
 
