--- a/index.html
+++ b/index.html
@@ -122,27 +122,80 @@
 
 
     <section class="my-24 rounded-lg bg-gradient-to-r from-[#F00] to-[#FF8938] px-20 py-24  flex flex-col lg:flex-row gap-12">
-      <div class="text-white space-y-5">
-        <h2 class="text-5xl font-extrabold">Meet Our Super <br> Clients</h2>
+      <div class="text-white flex items-center p-28">
+        <div class="space-y-5">
+          <h2 class="text-5xl font-extrabold">Meet Our Super <br> Clients</h2>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
           some form, by injected humour, or randomised words which don't look even slightly believable. </p>
         <button class="btn btn-primary">Show All</button>
+        </div>
       </div>
 
-      <div class=" relative p-10 rounded-lg bg-white ">
-        <img  class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
-        <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-        <h4 class="font-bold mt-5">Ilham Yuda</h4>
-        <p class="font-medium">BusinessMan</p>
-        <div class=" flex justify-end">
-          <img src="images/circles.png" alt="">
+      <div class="relative">
+        <div class=" relative z-10 mb-16 p-10 opacity-40 rounded-lg bg-white ">
+          <img  class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+          <p class="font-medium">BusinessMan</p>
+          <div class=" flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
+        <div class=" absolute top-40 z-20 lg:-left-32 w-[433px] p-10 rounded-lg bg-white ">
+          <img  class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+          <p class="font-medium">BusinessMan</p>
+          <div class=" flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
+        </div>
+        <div class=" relative z-10 opacity-40 p-10 rounded-lg bg-white ">
+          <img  class="absolute -top-5 -left-5 border-4 border-white rounded-full" src="images/client.png" alt="">
+          <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+          <h4 class="font-bold mt-5">Ilham Yuda</h4>
+          <p class="font-medium">BusinessMan</p>
+          <div class=" flex justify-end">
+            <img src="images/circles.png" alt="">
+          </div>
         </div>
       </div>
     </section>
 
   </main>
-  <footer>
-
+  <footer class="footer p-10 bg-base-200 text-base-content">
+    <div>
+      <span class="footer-title">Services</span> 
+      <a class="link link-hover">Branding</a> 
+      <a class="link link-hover">Design</a> 
+      <a class="link link-hover">Marketing</a> 
+      <a class="link link-hover">Advertisement</a>
+    </div> 
+    <div>
+      <span class="footer-title">Company</span> 
+      <a class="link link-hover">About us</a> 
+      <a class="link link-hover">Contact</a> 
+      <a class="link link-hover">Jobs</a> 
+      <a class="link link-hover">Press kit</a>
+    </div> 
+    <div>
+      <span class="footer-title">Legal</span> 
+      <a class="link link-hover">Terms of use</a> 
+      <a class="link link-hover">Privacy policy</a> 
+      <a class="link link-hover">Cookie policy</a>
+    </div> 
+    <div>
+      <span class="footer-title">Newsletter</span> 
+      <div class="form-control w-80">
+        <label class="label">
+          <span class="label-text">Enter your email address</span>
+        </label> 
+        <div class="relative">
+          <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" /> 
+          <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
